# PlexMCP-OSS

./: .env.example  .gitignore  Cargo.toml  KNOWN_ISSUES.md  README.md  SECURITY.md  SELF_HOSTING.md
.embeddings/: package-lock.json  package.json
.github/workflows/: daily-quality.yml  docker-publish.yml  pr-checks.yml  release.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  state.rs
crates/api/src/auth/: edge_case_tests.rs  middleware.rs  middleware_tests.rs  mod.rs  sessions.rs
crates/api/src/mcp/: handlers.rs
crates/api/src/routes/: admin_legacy.rs  mcp_proxy.rs
crates/billing/src/: edge_case_tests.rs  invariants.rs  lib.rs  refund.rs  subscriptions.rs  tax.rs  webhooks.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
docs-site/docs/: intro.md
docs-site/docs/api-reference/: api-keys.md  authentication.md  errors.md  mcps.md  overview.md
docs-site/docs/concepts/: architecture.md  security.md
docs-site/docs/dashboard/: api-keys.md  billing.md  settings.md
docs-site/docs/getting-started/: quickstart.md
docs-site/docs/guides/authentication/: api-keys.md  jwt-auth.md
docs-site/docs/guides/integrations/: claude-desktop.md  sdk-examples.md
docs-site/docs/guides/mcps/: invoking-tools.md  registering-mcps.md
docs-site/docs/self-hosting/: docker.md  index.md  manual.md  upgrading.md
docs-site/docs/support/: contact.md  faq.md
docs/operations/: backup-and-disaster-recovery.md
docs/security/: incident-response.md
web/: package-lock.json  package.json
