[package]
name = "plexmcp-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "plexmcp-api"
path = "src/main.rs"

[features]
default = []
billing = ["plexmcp-billing", "dep:async-stripe"]

[dependencies]
plexmcp-shared = { path = "../shared" }
plexmcp-billing = { path = "../billing", optional = true }

tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }

# API key signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"

# HTTP client for Supabase token verification
reqwest = { version = "0.12", features = ["json"] }

# Encryption for PIN-protected API key storage
aes-gcm = "0.10"
base64 = "0.22"

# Two-Factor Authentication (TOTP)
totp-rs = { version = "5.6", features = ["gen_secret", "otpauth"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

# Constant-time comparison (SOC 2 CC6.1 - prevents timing attacks)
subtle = "2.6"

# MCP Proxy dependencies
futures = "0.3"
tokio-stream = "0.1"
tokio-retry = { workspace = true }

# DNS resolution for custom domain verification
trust-dns-resolver = "0.23"

# Stripe for invoice payment operations (optional - only with billing feature)
async-stripe = { workspace = true, optional = true }

# URL parsing for analytics
url = "2.5"

# IP Geolocation (MaxMind GeoLite2)
maxminddb = "0.27.0"
flate2 = "1.0"         # For .tar.gz extraction
tar = "0.4"            # For .tar.gz extraction

[dev-dependencies]
mockito = "1.2"
serial_test = "3.2"
